feat: add lineup templates and lineups (#4)
